sandbox/output
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(0, medicine);
                        ^
  symbol:   variable medicine
  location: class MedicineClashTest
1 error
